# django-kit-starter

./: .gitignore  docker-compose.yml  pyproject.toml
apps/core/: __init__.py  admin.py  apps.py  auth_backend.py  choices.py  managers.py  middleware.py  models.py  querysets.py  services.py  signals.py  validators.py
apps/core/management/commands/: add_superuser.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: base.py  catalogs.py  location.py
apps/peoples/: choices.py  managers.py  models.py  querysets.py
apps/store/: choices.py  managers.py  models.py  querysets.py
config/: settings.py  urls.py
config/settings/: base.py  development.py
config/tools/: constance.py
docker/: Dockerfile
