[project]
name = "django-kit-starter"
version = "0.1.0"
description = "Django Kit Starter"
authors = [
    {name = "Enrique Lazo Bello",email = "enlabe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false